# ship_detect

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cmd.fish  example.cpp  main.cpp  test_images.sh
lib/: timeit.hpp  utils.hpp
